# live-trade-bench

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE.COMMERCIAL  Makefile  Procfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: codespell.yml  isort.yml  mypy.yml  pytest.yml  ruff.yml
backend/: README.md  models_data.json  news_data.json  polymarket_system_state.pkl  requirements.txt  run.py  social_data.json  stock_system_state.pkl  system_data.json
backend/app/: __init__.py  config.py  counter_data.py  data.py  main.py  models_data.py  news_data.py  price_data.py  schemas.py  social_data.py  system_data.py  system_factory.py  trading_actions.py  trading_system.py
docs/: metrics_guide.md
examples/: QQQ.csv  analyze_data.py  async_demo.py  backtest_demo.py  bitmex_demo.py  calculate_correlation.py  calculate_metrics.py  delta_new.py  demo.py  fetcher.py  fetcher_demo.py  full.py  mock_agents_demo.py  mock_fetchers_demo.py  model_demo.py  modular_demo.py  news_demo.py  option_advanced_demo.py  option_demo.py  polymarket_demo.py  reddit_demo.py  stock_demo.py  stock_price_simulator.py  test_evaluators.py  test_fetcher.py  test_metrics.py  test_visualization.py  visualize_correlation.py  visualize_correlation_polymarket.py  visualize_metrics.py
examples/fetchers/: stock.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.css  types.ts
live_trade_bench/: __init__.py
live_trade_bench/accounts/: __init__.py  action.py  base_account.py  bitmex_account.py  forex_account.py  polymarket_account.py  portfolio_models.py  stock_account.py  utils.py
live_trade_bench/agents/: __init__.py  base_agent.py  bitmex_agent.py  forex_agent.py  polymarket_agent.py  polymarket_system.py  stock_agent.py  stock_system.py
live_trade_bench/backtest/: __init__.py  backtest_runner.py
live_trade_bench/backtesting/: __init__.py  backtest_runner.py  backtest_system.py
live_trade_bench/fetchers/: __init__.py  base_fetcher.py  bitmex_fetcher.py  constants.py  forex_fetcher.py  news_fetcher.py  option_fetcher.py  polymarket_fetcher.py  reddit_fetcher.py  stock_fetcher.py
live_trade_bench/mock/: __init__.py  mock_agent.py  mock_fetcher.py  mock_system.py
live_trade_bench/systems/: __init__.py  bitmex_system.py  forex_system.py  polymarket_system.py  stock_system.py
live_trade_bench/utils/: __init__.py  agent_utils.py  llm_client.py
scripts/: demo.sh  ml_demo.sh  regenerate_failed.py
tests/: scenarios_config.py  test_data_fetcher.py  test_forex_fetcher.py  test_llm_bearish_scenario.py  test_llm_bullish_scenario.py  test_models.py  test_news_crypto_smoke.py  test_price_formatting.py  test_reddit_crypto_smoke.py
trading_bench/: __init__.py  bench.py  config.py  data_fetcher.py  evaluator.py  metrics.py  model.py  model_wrapper.py  signal.py  utils.py  visualization.py
trading_bench/accounts/: __init__.py  base_account.py  polymarket_account.py  stock_account.py
trading_bench/agents/: __init__.py  agent.py  base_agent.py  polymarket_agent.py  (+3 more)
(+94 files in other folders)
